defect 2044 chinese table alignment fix

--- a/node-app/src/views/hk/components/content/container/style.scss
+++ b/node-app/src/views/hk/components/content/container/style.scss
@@ -30,3 +30,11 @@
 		min-height: 50px;
 	}
 }
+
+//chinese table width issue fix
+@media (min-width: $mobile-screen-min) and (max-width: $mobile-screen-max) {
+	:lang(zh-TW) .cmp-table-data-content table tbody tr th {
+		width: auto;
+		min-width: 120px;
+	}
+}
